CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(XtraGraphComputing)
ADD_DEFINITIONS(-DUSE_LOG -DTIME_RESULTS)

SET(CMAKE_CXX_FLAGS
        "${CMAKE_CXX_FLAGS} -std=c++17 -O3  -fopenmp -march=native")

FIND_PACKAGE(OpenMP REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(cycle)
ADD_SUBDIRECTORY(toolset)
ADD_SUBDIRECTORY(util)
